# jax-offpolicy-rl

./: .gitignore  README.md  cli.py  pyproject.toml
scripts/: sale_tqc.sh  simba.sh  td7.sh
src/jax_rl/: __init__.py  abc.py  auto_ent.py  evaluate_agent.py  rollout.py  utils.py
src/jax_rl/replay_memory/: __init__.py  abc.py  lap.py  simple.py
src/sale_tqc/: __init__.py  agent.py  algorithm.py  run.py
src/simba/: __init__.py  agent.py  algorithm.py  network.py  run.py
src/td7/: __init__.py  agent.py  algorithm.py  network.py  run.py
